firebase-debug.log
[debug] [2019-03-30T12:03:09.894Z] ----------------------------------------------------------------------
[debug] [2019-03-30T12:03:09.909Z] Command:       C:\nodejs\node.exe C:\Users\Usuario\AppData\Roaming\npm\node_modules\firebase-tools\lib\bin\firebase.js serve
[debug] [2019-03-30T12:03:09.911Z] CLI Version:   6.5.0
[debug] [2019-03-30T12:03:09.912Z] Platform:      win32
[debug] [2019-03-30T12:03:09.912Z] Node Version:  v10.15.1
[debug] [2019-03-30T12:03:09.921Z] Time:          Sat Mar 30 2019 09:03:09 GMT-0300 (GMT-03:00)
[debug] [2019-03-30T12:03:09.921Z] ----------------------------------------------------------------------
[debug] 
[debug] [2019-03-30T12:03:10.033Z] > command requires scopes: ["email","openid","https://www.googleapis.com/auth/cloudplatformprojects.readonly","https://www.googleapis.com/auth/firebase","https://www.googleapis.com/auth/cloud-platform"]
[debug] [2019-03-30T12:03:10.036Z] > authorizing via signed-in user
[debug] [2019-03-30T12:03:10.037Z] [iam] checking project tinderpet-e6626 for permissions ["firebase.projects.get"]
[debug] [2019-03-30T12:03:10.049Z] > refreshing access token with scopes: ["email","https://www.googleapis.com/auth/cloud-platform","https://www.googleapis.com/auth/cloudplatformprojects.readonly","https://www.googleapis.com/auth/firebase","openid"]
[debug] [2019-03-30T12:03:10.050Z] >>> HTTP REQUEST POST https://www.googleapis.com/oauth2/v3/token  
 <request body omitted>
[debug] [2019-03-30T12:03:10.502Z] <<< HTTP RESPONSE 200
[debug] [2019-03-30T12:03:10.638Z] >>> HTTP REQUEST POST https://cloudresourcemanager.googleapis.com/v1/projects/tinderpet-e6626:testIamPermissions  

[debug] [2019-03-30T12:03:11.944Z] <<< HTTP RESPONSE 200
[debug] [2019-03-30T12:03:11.946Z] >>> HTTP REQUEST GET https://cloudresourcemanager.googleapis.com/v1/projects/tinderpet-e6626  
 
[debug] [2019-03-30T12:03:13.112Z] <<< HTTP RESPONSE 200
[info] 
[info] === Serving from 'C:\nodejs\sorteo-react'...
[info] 
[info] i  functions: Preparing to emulate functions.
[debug] [2019-03-30T12:03:31.924Z] Fetching environment
[debug] [2019-03-30T12:03:31.950Z] >>> HTTP REQUEST GET https://mobilesdk-pa.googleapis.com/v1/projects/1097994143386:getServerAppConfig  
 
[debug] [2019-03-30T12:03:31.955Z] >>> HTTP REQUEST GET https://mobilesdk-pa.googleapis.com/v1/projects/1097994143386/clients/_:getWebAppConfig  
 
[debug] [2019-03-30T12:03:32.643Z] <<< HTTP RESPONSE 200
[debug] [2019-03-30T12:03:32.646Z] Starting @google-cloud/functions-emulator
[debug] [2019-03-30T12:03:34.008Z] <<< HTTP RESPONSE 200
[info] i  hosting: Serving hosting files from: public
[info] +  hosting: Local server: http://localhost:5000
[debug] [2019-03-30T12:03:46.321Z] Parsing function triggers
[warn] !  functions: Failed to load functions source code. Ensure that you have the latest SDK by running npm i --save firebase-functions inside the functions directory.
[debug] [2019-03-30T12:03:46.669Z] Error during trigger parsing:  Error occurred while parsing your function triggers.

C:\nodejs\sorteo-react\functions\index.js:9
import React from 'react';
       ^^^^^

SyntaxError: Unexpected identifier
    at new Script (vm.js:79:7)
    at createScript (vm.js:251:10)
    at Object.runInThisContext (vm.js:303:10)
    at Module._compile (internal/modules/cjs/loader.js:657:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:700:10)
    at Module.load (internal/modules/cjs/loader.js:599:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:538:12)
    at Function.Module._load (internal/modules/cjs/loader.js:530:3)
    at Module.require (internal/modules/cjs/loader.js:637:17)
    at require (internal/modules/cjs/helpers.js:22:18)
[warn] !  functions: Error from emulator. Error occurred while parsing your function triggers.

C:\nodejs\sorteo-react\functions\index.js:9
import React from 'react';
       ^^^^^

SyntaxError: Unexpected identifier
    at new Script (vm.js:79:7)
    at createScript (vm.js:251:10)
    at Object.runInThisContext (vm.js:303:10)
    at Module._compile (internal/modules/cjs/loader.js:657:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:700:10)
    at Module.load (internal/modules/cjs/loader.js:599:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:538:12)
    at Function.Module._load (internal/modules/cjs/loader.js:530:3)
    at Module.require (internal/modules/cjs/loader.js:637:17)
    at require (internal/modules/cjs/helpers.js:22:18)
[debug] [2019-03-30T12:03:46.686Z] 
[debug] [2019-03-30T12:11:50.200Z] ----------------------------------------------------------------------
[debug] [2019-03-30T12:11:50.215Z] Command:       C:\nodejs\node.exe C:\Users\Usuario\AppData\Roaming\npm\node_modules\firebase-tools\lib\bin\firebase.js serve --only hosting
[debug] [2019-03-30T12:11:50.216Z] CLI Version:   6.5.0
[debug] [2019-03-30T12:11:50.216Z] Platform:      win32
[debug] [2019-03-30T12:11:50.217Z] Node Version:  v10.15.1
[debug] [2019-03-30T12:11:50.271Z] Time:          Sat Mar 30 2019 09:11:50 GMT-0300 (GMT-03:00)
[debug] [2019-03-30T12:11:50.271Z] ----------------------------------------------------------------------
[debug] 
[debug] [2019-03-30T12:11:50.374Z] > command requires scopes: ["email","openid","https://www.googleapis.com/auth/cloudplatformprojects.readonly","https://www.googleapis.com/auth/firebase","https://www.googleapis.com/auth/cloud-platform"]
[debug] [2019-03-30T12:11:50.376Z] > authorizing via signed-in user
[debug] [2019-03-30T12:11:50.376Z] [iam] checking project tinderpet-e6626 for permissions ["firebase.projects.get"]
[debug] [2019-03-30T12:11:50.380Z] >>> HTTP REQUEST POST https://cloudresourcemanager.googleapis.com/v1/projects/tinderpet-e6626:testIamPermissions  

[debug] [2019-03-30T12:11:52.401Z] <<< HTTP RESPONSE 200
[debug] [2019-03-30T12:11:52.408Z] >>> HTTP REQUEST GET https://cloudresourcemanager.googleapis.com/v1/projects/tinderpet-e6626  
 
[debug] [2019-03-30T12:11:53.663Z] <<< HTTP RESPONSE 200
[info] 
[info] === Serving from 'C:\nodejs\sorteo-react'...
[info] 
[debug] [2019-03-30T12:11:53.674Z] >>> HTTP REQUEST GET https://mobilesdk-pa.googleapis.com/v1/projects/1097994143386/clients/_:getWebAppConfig  
 
[debug] [2019-03-30T12:11:54.338Z] <<< HTTP RESPONSE 200
[info] i  hosting: Serving hosting files from: public
[info] +  hosting: Local server: http://localhost:5000
[info] Shutting down...
